--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,7 @@ body {
 }
 
 .jumbotron h1 {
-	color: #1b435e;
+	color: #ccc;
 	font-size: 48px;  
 	font-family: 'Oswald', sans-serif;
 	font-weight: bold;
@@ -57,7 +57,7 @@ body {
 
 .jumbotron p {
   font-size: 20px;
-  color: #1b435e;
+  color: #ccc;
 }
 
 /* button class CSS is courtesy of http://css-tricks.com/examples/ButtonMaker/# */
@@ -102,6 +102,12 @@ body {
   background-color: #1b435e;
 }
 
+.Work figcaption {
+  color: #ccc;
+  text-align: right;
+  font-size: 14px;
+}
+
 .Work img {
 	min-width: 200px;
 	min-height: 200px;
@@ -110,16 +116,16 @@ body {
 }
 
 .Work h2 {
-	color: #1b435e;
+	color: #ccc;
 }
 
 .Work h3 {
 	text-align: center;
-	color: #1b435e;
+	color: #ccc;
 }
 
 .Work p {
-  color: #1b435e;
+  color: #ccc;
 }
 
 .About {
@@ -129,12 +135,12 @@ body {
 
 .About h4 {
   margin-top: 40px;
-  color: #5a5a5a;
+  color: #ccc;
 }
 
 .About p {
   font-size: 20px;
-  color: #5a5a5a;
+  color: #ccc;
 }
    
 .Contact img {
